--- a/src/MinMe.Blazor/_Imports.razor
+++ b/src/MinMe.Blazor/_Imports.razor
@@ -1,11 +1,14 @@
 ﻿@using System.Net.Http
+@using System.Threading.Tasks;
+@using System.Reactive.Threading.Tasks;
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Blazored.Toast
-@using Blazored.Toast.Services
+@using ReactiveUI;
 @using MinMe.Blazor
 @using MinMe.Blazor.Shared
+@using MinMe.Blazor.Data
+@using MinMe.Blazor.ViewModels;
