Publish Slides component using ReactiveUI ViewModel

--- a/src/MinMe.Blazor/Pages/FetchData.razor
+++ b/src/MinMe.Blazor/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using MinMe.Blazor.Data
+@using MinMe.Blazor.Services
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
