--- a/src/MinMe.Blazor/Pages/Index.razor
+++ b/src/MinMe.Blazor/Pages/Index.razor
@@ -1,39 +1,7 @@
 ﻿@page "/"
-@inject DocumentService documentService
-<h1>Open PowerPoint file</h1>
 
-<button class="btn btn-primary" @onclick="OpenFile">Open</button>
-
-@if (currentFile is { })
-{
-    <h4>Selected file:</h4>
-    <p>@currentFile</p>
-    <button class="btn btn-primary" @onclick="PublishSlides">Publish Slides</button>
-    @if (publishResult is { })
-    {
-        <p>Extracted @publishResult slides</p>
-    }
-}
+<PublishSlides/>
 
 @code {
-    private string? currentFile = null;
-    private string? publishResult = null;
 
-    private async Task OpenFile()
-    {
-        currentFile = await documentService.OpenFile();
-        publishResult = null;
-        StateHasChanged();
-    }
-
-    private async Task PublishSlides()
-    {
-        await Task.Run(() =>
-        {
-            var count = documentService.PublishSlides(currentFile);
-            publishResult = count.ToString();
-        });
-
-        StateHasChanged();
-    }
 }
