--- a/src/MinMe.Blazor/Shared/NavMenu.razor
+++ b/src/MinMe.Blazor/Shared/NavMenu.razor
@@ -25,6 +25,10 @@
     </ul>
 </div>
 
+<div class="@NavMenuCssClass logo" @onclick="ToggleNavMenu">
+    <img src="/images/logo.png" />
+</div>
+
 @code {
     private bool collapseNavMenu = true;
 
