--- a/src/MinMe.Blazor/Pages/_Host.cshtml
+++ b/src/MinMe.Blazor/Pages/_Host.cshtml
@@ -32,6 +32,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="_content/Blazor.Fluxor/index.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
