--- a/src/MinMe.Blazor/Pages/Counter.razor
+++ b/src/MinMe.Blazor/Pages/Counter.razor
@@ -1,27 +1,16 @@
 ﻿@page "/counter"
-@using MinMe.Blazor.Services
-@implements IViewFor<CounterViewModel>
-
+@inherits global::Blazor.Fluxor.Components.FluxorComponent
+@using global::Blazor.Fluxor
+@using global::MinMe.Blazor.Store.Counter
+@inject IDispatcher Dispatcher
+@inject IState<CounterState> CounterState
 
 <h1>Counter</h1>
 
-<p>Current count: @ViewModel.CurrentCount</p>
+<p>Current count: @CounterState.Value.CurrentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-<button class="btn btn-secondary" @onclick="ShowErrorDialog">Error dialog</button>
-
 
 @code {
-
-    [Inject]
-    public CounterViewModel ViewModel { get; set; }
-
-    object IViewFor.ViewModel
-    {
-        get => ViewModel;
-        set => ViewModel = (CounterViewModel)value;
-    }
-
-    private Task IncrementCount() => ViewModel.Increment.Execute().ToTask();
-    private Task ShowErrorDialog() => ViewModel.ShowError.Execute().ToTask();
-}
+    void IncrementCount() => Dispatcher.Dispatch(new IncrementCounterAction());
+}
