--- a/src/MinMe.Blazor/Shared/NavMenu.razor
+++ b/src/MinMe.Blazor/Shared/NavMenu.razor
@@ -32,7 +32,7 @@
 @code {
     private bool collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
